solve hamburger overflow issue

--- a/client/src/components/Contact/Contact.css
+++ b/client/src/components/Contact/Contact.css
@@ -29,10 +29,16 @@
     .container {
       max-width: 1650px;
     }
+    .contents {
+      justify-content: space-between !important;
+    }
   }
   
   .contents {
     display: flex;
+    /* align-items: center;
+    justify-content: center;
+    flex-direction: column; */
     margin-right: -15px;
     margin-left: -15px;
   }
@@ -51,9 +57,7 @@
     }
   }
   @media (min-width: 1600px) {
-    .contents {
-      justify-content: space-between !important;
-    }
+  
   }
   
   .get__in__touch {
@@ -369,8 +373,10 @@
       align-items: center;
       margin-left: auto;
       margin-right: auto;
-      display: flex;
+      display: flex; 
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
       margin-bottom: 35px;
     }
