--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -83,12 +83,16 @@
 @media only screen and (max-width: 600px) {
   .footer-links__column {
     width: 100%;
-    text-align: center;
+    /* text-align: center; */
     margin-bottom: 40px;
   }
 
   .footer-links{
     padding-left: 0;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
   }
   
   .footer-links__title {
