--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -69,8 +69,8 @@
   color: white;
   top: 100%;
   left: 0;
-  width: 200%; 
-  display: none;
+  width: 100%; 
+  display:  none;
   flex-direction: column;
   border-radius: 0 0 10px 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
@@ -169,12 +169,11 @@
   }
 
   .h-menu {
-    font-family: 'Montserrat', sans-serif;
-    
+    font-family: 'Montserrat', sans-serif;   
     font-weight: bold;
     color: var(--black);
     position: absolute;
-    top: 3.5rem;
+    top: 5rem;
     right: 4rem;
     background: var(--primary);
     flex-direction: column;
